# rfdetrv2

./: .gitignore  README.md  autoresearch_det.sh  count_model_params.py  evaluate.py  evaluate_fixed.py  finetune.py  inference.py  inference_video.py  program.md  pyproject.toml  run_autoresearch_det.py  run_finetune.sh  run_train_supervised.sh  test.py  train_supervised.py  visualize_attention.py  visualize_prototype_rope2d.py
.claude/: settings.json
configs/: rfdetr_base.yaml  rfdetr_large.yaml  rfdetr_small.yaml
docs/: REPO_LAYOUT.md
patches/: apply_patches.py
rfdetrv2/: __init__.py  args.py  config.py  detr.py  engine.py  main.py
rfdetrv2/cfg/: __init__.py  loader.py
rfdetrv2/cli/: main.py
rfdetrv2/configs/: _generate_variant_yamls.py  train_default.yaml
rfdetrv2/core/: __init__.py  evaluator.py  model.py  trainer.py
rfdetrv2/data/: __init__.py  coco.py  coco_eval.py  o365.py  transforms.py  transforms_document.py  yolo.py
rfdetrv2/datasets/: __init__.py  coco.py  (+6 more)
scripts/: README.md  _common.py  benchmark.py  count_model_params.py  evaluate.py  finetune.py  inference.py  inference_video.py  run_evaluate.sh  run_finetune.sh  run_finetune_multigpu.sh  run_finetune_single_gpu.sh  run_train.sh  run_train_multigpu.sh  run_train_supervised.sh  run_train_torchrun.sh  train.py  train_supervised.py  visualize_attention.py  visualize_prototype_rope2d.py
tests/: test_dinov3_pretrained_download.py
tools/: clean_dataset.py  count_params.py  datasets_cleaner.py  visualize_augment.py  visualize_data_augment.py  visualize_dataset.py  visualize_doclayout.py
(+78 files in other folders)
