[project]
name = "autoresearch-rfdetrv2"
version = "0.1.0"
description = "AutoResearch for RF-DETRv2 fine-tuning on small datasets"
requires-python = ">=3.10"

dependencies = [
    # Core training
    "torch>=2.2.0",
    "torchvision>=0.17.0",

    # RF-DETRv2 core deps
    "supervision>=0.25.0",
    "transformers>=4.40.0",
    "timm>=1.0.0",
    "einops>=0.7.0",

    # COCO evaluation
    "pycocotools>=2.0.7",

    # Data / augmentation
    "albumentations>=1.4.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",

    # Utilities
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.16.0",

    # Logging / config
    "pyyaml>=6.0.1",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.uv]
# Agent ONLY uses packages listed above.
# DO NOT install new packages during autoresearch — use what's here.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"